applied Jerry fixes

--- a/docs/thesis/bitcoin.tex
+++ b/docs/thesis/bitcoin.tex
@@ -1,11 +1,11 @@
 \chapter{The Bitcoin Network}
 	\label{sec:bitcoin}
 
-\gls{bitcoin} is a peer-to-peer electronic cash system without any trusted third party and was described by Satoshi Nakamoto in October 2008~\cite{nakamoto:bitcoin}. The name Bitcoin refers to both the operating network of \gls{node}s and the system's native currency. The network and protocol is usually refereed to with a large B, Bitcoin, and the currency with a small b, bitcoin.\footnote{While it's convention to not capitalize currencies in the English language, it's not widely followed in mainstream or semi-mainstream outlets. Also the plural form of currencies is equivalent to the singular. The convention will be followed in this report.}
+\gls{bitcoin} is a peer-to-peer electronic cash system without any trusted third party and was described by Satoshi Nakamoto in October 2008~\cite{nakamoto:bitcoin}. The name Bitcoin refers to both the operating network of \gls{node}s and the system's native currency. The network and protocol are usually refereed to with a large B, Bitcoin, and the currency with a small b, bitcoin.\footnote{While it's convention to not capitalize currencies in the English language, it's not widely followed in mainstream or semi-mainstream outlets. Also the plural form of currencies is equivalent to the singular. The convention will be followed in this report.}
 
 \section{Digital Signatures}
 
-Part of the solution is provided by one way asymmetric encryption utilizing the \texttt{secp256k1} elliptic curve. Asymmetric encryption or public-key encryption allows the generation of key pairs with the ability to derive a public key from a private key without the ability to derive the private key from the public key and the ability to prove ownership of the private key through signatures without disclosing the private key. Ownership and expenditure of bitcoin is proved by signing a previous transaction output payable to the public key derived bitcoin address\footnote{A bitcoin address is derived from the public key by \gls{hash}ing the public key with both \texttt{SHA256} and \texttt{RIPEMD160}} with the accompanying private key.\footnote{This part of the solution has been suggested many times before, earliest 1983~\cite{chaum:blind:signatures}}
+Part of the solution is provided by one way asymmetric encryption utilizing the \texttt{secp256k1} elliptic curve. Asymmetric encryption or public-key encryption allows the generation of key pairs with the ability to derive a public key from a private key without the ability to derive the private key from the public key and the ability to prove ownership of the private key through signatures without disclosing the private key. Ownership and expenditure of bitcoin are proved by signing a previous transaction output payable to the public key derived bitcoin address\footnote{A bitcoin address is derived from the public key by \gls{hash}ing the public key with both \texttt{SHA256} and \texttt{RIPEMD160}} with the accompanying private key.\footnote{This part of the solution has been suggested many times before, earliest 1983~\cite{chaum:blind:signatures}}
 
 \begin{figure}[!htb]
 
@@ -17,7 +17,7 @@ Part of the solution is provided by one way asymmetric encryption utilizing the 
 
 \end{figure}
 
-Bitcoin is essentially a long ledger of inputs and outputs. Note that the whole output must be spent in the same transaction and usually there is an output leading back to an address the spender controls with the 'change'. The sum of all the inputs and the sum of all the outputs usually does not line up, the differential is the implicit miners fee the miner receives if the transaction is included in a block. 
+Bitcoin is essentially a long ledger of inputs and outputs. Note that the whole output must be spent in the same transaction and usually there is an output leading back to an address the spender controls with the 'change'. The sum of all the inputs and the sum of all the outputs usually do not line up, the differential is the implicit miners fee the miner receives if the transaction is included in a block. 
 
 \section{The Double-Spending problem}
 
@@ -28,7 +28,7 @@ While digital signatures are able prove ownership of bitcoin, there is nothing t
 The network reaches a coherent global view over the transaction history by a method known as \textit{Proof-of-work}. The Bitcoin \textit{Proof-of-work} algorithm is very similar to that of hashcash as it uses a hash-based cost function which requires a probabilistic amount of work and the proof of the work fixed cost to verify~\cite{back:hashcash}\footnote{It's similar to hashcash in both being \gls{hash}-based with a cost function that is non-interactive, publicly auditable, trapdoor-free and have an unbounded probabilistic cost~\cite{back:hashcash}.
 \gls{bitcoin} uses the double \texttt{SHA256} hash function.}.
 
-The \textit{Proof-of-work} algorithm is directly tied into the bitcoin transaction history data structure composite of a chain of blocks as seen in figure \ref{fig:blockchain}.
+The \textit{Proof-of-work} algorithm is directly tied into the bitcoin transaction history data structure composite of a chain of blocks as seen in Figure \ref{fig:blockchain}.
 
 \begin{figure}[!htb]
 	\hspace*{-0.4cm} 
@@ -54,18 +54,18 @@ The 'work' part of the algorithm is to find a sufficiently small hash over the b
 	
 \end{figure}
 
-The content in the block header is practically immutable since a change would make the \gls{hash} invalid. The transactions are not in the header but are still immutable by the use of a Merkle tree(see fig \ref{fig:merkle:tree}). A Merkle tree is a binary tree in which the parent is the hash of its two children. The root hash of the tree is included in the header and if any transaction were to change it would also cause the root hash to change rendering each transaction immutable by implication. \gls{bitcoin} uses the double \texttt{SHA256} as the Merkle tree hash function.
+The content in the block header is practically immutable since a change would make the \gls{hash} invalid. The transactions are not in the header but are still immutable by the use of a Merkle tree(see Figure \ref{fig:merkle:tree}). A Merkle tree is a binary tree in which the parent is the hash of its two children. The root hash of the tree is included in the header and if any transaction were to change it would also cause the root hash to change rendering each transaction immutable by implication. \gls{bitcoin} uses the double \texttt{SHA256} as the Merkle tree hash function.
 
 \subsection{Incentive}
 
-The miners are incentivized by receiving the transaction fees from the transactions included in the mined block as well as a subsidy. The subsidy is on the form of a coinbase transaction which has only outputs, this is how new bitcoin is minted. Every fourth year the subsidy halves and by 2140 will be zero. The miner must follow the consensus rules and mined blocks not following the rules will not be propagated through the network causing the miner to loose out on the block reward.
+The miners are incentivized by receiving the transaction fees from the transactions included in the mined block as well as a subsidy. The subsidy is on the form of a coinbase transaction which has only outputs, this is how new bitcoin is minted. Every fourth year the subsidy halves and by 2140 it will be zero. The miner must follow the consensus rules and mined blocks not following the rules will not be propagated through the network causing the miner to loose out on the block reward.
 
-A \gls{miner}, or a miner cartel, controlling more than 50\% of the hashing power could technically double-spend transactions by mining blocks on a secret chain \textbf{A}, instead of the public chain \textbf{B}, without broadcasting them to the greater network and simultaneously spending outputs \textbf{OB} on chain \textbf{B}. When the chain \textbf{A} is broadcast and if it contains more work than \textbf{B} the outputs \textbf{OB} would be invalidated and never have transpired per the consensus rules. A huge problem with such an attack is that the confidence in the network would decrease causing the value of the 'stolen' bitcoin outputs \textbf{OA} to be close to worthless. The attacker would still own a lot of specialized hardware, only capable of running the \texttt{SHA256} hashing algorithm, that is worthless without utility outside the network. In a sense such an attack would cause mutual destruction for both the network and the attacker. 
+A \gls{miner}, or a miner cartel, controlling more than 50\% of the hashing power could technically double-spend transactions by mining blocks on a secret chain $A$, instead of the public chain $B$, without broadcasting them to the greater network and simultaneously spending outputs $OB$ on chain $B$. When the chain $A$ is broadcast and if it contains more work than $B$ the outputs $OB$ would be invalidated and never have transpired per the consensus rules. A huge problem with such an attack is that the confidence in the network would decrease causing the value of the 'stolen' bitcoin outputs $OA$ to be close to worthless. The attacker would still own a lot of specialized hardware, only capable of running the \texttt{SHA256} hashing algorithm, that is worthless without utility outside the network. In a sense such an attack would cause mutual destruction for both the network and the attacker. 
 
 \section{Script}
 \label{sec:script}
 
-Transactions utilize a forth-like polish-notation stack based execution scripting language~\cite{antonopoulos:mastering:bitcoin}. Each transaction output consist of a locking script\footnote{Also refereed to as scriptPubKey. Locking script is a broader term and technically scriptPubKey scripts $ \subseteq $ locking scripts.}. In order to spend an output a valid unlocking script must be provided in the input to the spending transaction that solves the locking script\footnote{scriptSig, witness $\subseteq $ unlocking scripts.}. Validation is performed by executing the unlocking script and locking script sequentially as seen in figure \ref{fig:simple:script}. 
+Transactions utilize a forth-like polish-notation stack based execution scripting language~\cite{antonopoulos:mastering:bitcoin}. Each transaction output consist of a locking script\footnote{Also refereed to as scriptPubKey. Locking script is a broader term and technically scriptPubKey scripts $ \subseteq $ locking scripts.}. In order to spend an output a valid unlocking script must be provided in the input to the spending transaction that solves the locking script\footnote{scriptSig, witness $\subseteq $ unlocking scripts.}. Validation is performed by executing the unlocking script and locking script sequentially as seen in Figure \ref{fig:simple:script}. 
 
 \begin{figure}[!hbt]
 		\centering
@@ -106,7 +106,7 @@ The P2PKH pushes the signature produced by the private key and the public key to
 
 \subsection{Pay to Script Hash}
 
-The Pay-to-Script-Hash or P2SH is a more flexible transaction than the P2PKH and was introduced with \gls{bip}016\footnote{Bitcoin Improvement Proposal}~\cite{bip:0016:p2sh}. It allows the locking script to only be the hash of the redeemable script. If a long script with many public keys is considered as seen in figure \ref{fig:cumbersome:script}.
+The Pay-to-Script-Hash or P2SH is a more flexible transaction than the P2PKH and was introduced with \gls{bip}016\footnote{Bitcoin Improvement Proposal}~\cite{bip:0016:p2sh}. It allows the locking script to only be the hash of the redeemable script. If a long script with many public keys is considered as seen in Figure \ref{fig:cumbersome:script}.
 
 \newpage
 
@@ -125,7 +125,7 @@ The Pay-to-Script-Hash or P2SH is a more flexible transaction than the P2PKH and
 	\label{fig:cumbersome:script}
 \end{figure} 
 
-This multisig transaction(in figure \ref{fig:cumbersome:script}) could be rewritten as a P2SH by hashing the locking script with \texttt{SHA256} and  \texttt{RIPEMD160} and utilizing it as seen in figure \ref{fig:p2sh}.
+This multisig transaction(in Figure \ref{fig:cumbersome:script}) could be rewritten as a P2SH by hashing the locking script with \texttt{SHA256} and  \texttt{RIPEMD160} and utilizing it as seen in Figure \ref{fig:p2sh}.
 
 \begin{figure}[hbt!]
 	
@@ -137,8 +137,8 @@ This multisig transaction(in figure \ref{fig:cumbersome:script}) could be rewrit
    <@\texttt{\textcolor{black}{lock}}@>
 	\end{lstlisting}
 	
-	\caption{\textit{ The P2SH transaction which is essentially equivalent to the multisig in figure \ref{fig:cumbersome:script}.
-			Note that 'redeem script' corresponds to the lock script in figure \ref{fig:cumbersome:script}.
+	\caption{\textit{ The P2SH transaction which is essentially equivalent to the multisig in Figure \ref{fig:cumbersome:script}.
+			Note that 'redeem script' corresponds to the lock script in Figure \ref{fig:cumbersome:script}.
 	}}
 	\label{fig:p2sh}
 \end{figure}
@@ -181,7 +181,7 @@ Even though Script is not Turing complete it allows many quite advanced systems 
 	\label{fig:aantop:multi}
 \end{figure}
 
-One example of a more advanced script is this multisignature locking script with timelocks seen in figure \ref{fig:aantop:multi}. The script consists of three clauses, the clause executed is determined by the unlocking script since the condition to \texttt{IF} is the top item on the stack, not the following item as in most languages. The output could be spent by either clause being triggered:
+One example of a more advanced script is this multisignature locking script with timelocks seen in Figure \ref{fig:aantop:multi}. The script consists of three clauses, the clause executed is determined by the unlocking script since the condition to \texttt{IF} is the top item on the stack, not the following item as in most languages. The output could be spent by either clause being triggered:
 \begin{itemize}
 	\item 2 out 3 of the A, B, C signatures.
 	\item 30 days passed, D signature and 1 out of A, B, C signatures.
@@ -191,7 +191,7 @@ One example of a more advanced script is this multisignature locking script with
 \subsection{Relative lock time}
 \label{sec:rlt}
 
-The script(figure \ref{fig:aantop:multi}) uses a construction known as a relative time lock and uses the \texttt{OP\_CHECKSEQUENCEVERIFY} opcode in the bitcoin scripting language~\cite{bip:0068:sequence:lock:time}. The relative lock time will only become true after the defined time since the parent transaction was included in a block has passed. To avoid the block \gls{miner}s to become oracles of time, the median time of the eleven last blocks are used as the lock time(BIP113~\cite{bip:0113:median:time:passed}). The \texttt{OP\_CHECKSEQUENCEVERIFY} was activated by BIP112~\cite{bip:0112:sequence:lock:time:soft:fork}. The block time is therefor approximately an hour behind real time.
+The script(Figure \ref{fig:aantop:multi}) uses a construction known as a relative time lock and uses the \texttt{OP\_CHECKSEQUENCEVERIFY} opcode in the bitcoin scripting language~\cite{bip:0068:sequence:lock:time}. The relative lock time will only become true after the defined time since the parent transaction was included in a block has passed. To avoid the block \gls{miner}s to become oracles of time, the median time of the eleven last blocks are used as the lock time(BIP113~\cite{bip:0113:median:time:passed}). The \texttt{OP\_CHECKSEQUENCEVERIFY} was activated by BIP112~\cite{bip:0112:sequence:lock:time:soft:fork}. The block time is therefor approximately an hour behind real time.
 
 The Lightning Network utilize many complex transactions and more will be seen in chapter \ref{sec:lightning:network}.
 
@@ -199,6 +199,6 @@ The Lightning Network utilize many complex transactions and more will be seen in
 
 The \gls{bitcoin} network consists of \gls{node}s complying with the consensus protocol. In the beginning only the reference implementation available but with the growth of popularity others have implemented independent implementations~\cite{repository:bitcoin, repository:btcd, repository:neutrino}. For the most part,  they validate and propagate transactions and blocks.
 
-The mining component of nodes has mostly been decoupled from ordinary nodes with the advent of ASIC\footnote{Application Specific Integrated Circuit, in this case hardware that is built only to run \texttt{SHA256}.}. Mining nodes still do everything as an ordinary node does as it needs the transaction history to construct valid block. Non mining nodes validates and propagates blocks and transactions across the network. It allows some benefits in constructing transactions but mainly allows the operator to validate that the network operates as expected instead of trusting that it does.
+The mining component of nodes has mostly been decoupled from ordinary nodes with the advent of ASIC\footnote{Application Specific Integrated Circuit, in this case hardware that is built only to run \texttt{SHA256}.}. Mining nodes still do everything as an ordinary node does as it needs the transaction history to construct valid block. Non mining nodes validate and propagate blocks and transactions across the network. It allows some benefits in constructing transactions but mainly allows the operator to validate that the network operates as expected instead of trusting that it does.
 
 Construction of transactions does not require running a node and many bitcoin wallets do not operate as a \gls{node}.
