--- a/docs/thesis/macroeconomics.tex
+++ b/docs/thesis/macroeconomics.tex
@@ -14,13 +14,13 @@ On the fringes of our specie's history barter became the first medium in which t
 
 \end{displayquote}
 
-Barter is by itself quite limited, consider a System \textbf{S}
-consisting of \textbf{n} commodities, the amount of possible exchanges between commodities in \textbf{S} is \textbf{n x n}. When \textbf{n} eventually increases, the exchange pairs explodes exponentially. This makes it difficult to assess fair pricing and decreases the coincidence of a trade\footnote{The coincidence of finding another party who is looking to exchange the same commodity pair you are but in reverse order.}. The economist Carl Menger described it as inevitable for money to evolve from a sufficient volume of commodity barter~\cite{menger:origins:money}. If the same System \textbf{S} is considered with money - the possible exchange pairs would be reduced to only \textbf{n} pairs. 
+Barter is by itself quite limited. Consider a system $S$
+consisting of $n$ commodities, the amount of possible exchanges between commodities in $S$ is $n * n$. When $n$ eventually increases, the exchange pairs explode exponentially. This makes it difficult to assess fair pricing and decreases the coincidence of a trade\footnote{The coincidence of finding another party who is looking to exchange the same commodity pair you are but in reverse order.}. The economist Carl Menger described it as inevitable for money to evolve from a sufficient volume of commodity barter~\cite{menger:origins:money}. If the same system $S$ is considered with money - the possible exchange pairs would be reduced to only $n$ pairs. 
 
 \subsection{Characteristics of money}
 	\label{sec:characteristics:money}
 
-Out of these commodities money emerged and history has provided many peculiar forms of money. The Rai stones of Yap islands, The Wampum shells in North America\footnote{The Wampum shells were legal tender as recently as 1710 in North Carolina and long into the 1600s in New England.} and Aggry beads in Africa to name a few~\cite{szabo:shelling:out}. Although many different types of commodities have acted as money during certain times in history there are some characteristics that seem favorable and recur. The Federal Reserve Bank of Saint Louis lists them as~\cite{fed:function:money}\footnote{Note that only the characteristics are from the Federal Reserve, the descriptions are not.}:
+Out of commodity barter; money emerged. History has provided many peculiar forms of money. The Rai stones of Yap islands, the Wampum shells in North America\footnote{The Wampum shells were legal tender as recently as 1710 in North Carolina and long into the 1600s in New England.} and Aggry beads in Africa to name a few~\cite{szabo:shelling:out}. Although many different types of commodities have acted as money during certain times in history there are some characteristics that seem favorable and recur. The Federal Reserve Bank of Saint Louis lists them as~\cite{fed:function:money}\footnote{Note that only the characteristics are from the Federal Reserve, the descriptions are not.}:
 
 \begin{itemize}
 	\item \textbf{Durability}. The ability to remain intact over time.
@@ -110,7 +110,7 @@ As response to the Great Depression U.S President Franklin Roosevelt issued Exec
 
 A new economic era began following ideas of Maynard Keynes of economic interventionism and monetary policies set to aid growth. Keynes rebutted the classical idea that 'supply creates its own demand' and suggested that aggregated demand and aggregated supply may get stuck in an equilibrium with high unemployment~\cite{keynes:general:theory}. This would motivate government intervention to increase the aggregated demand. While demand may be altered by a government in multiple ways the far most effective one is by altering the money supply\footnote{The increased supply can be used directly by government but is usually used by lowering the funds rate, increasing investments and thus demand. Quantitative easing is another term used to describing this method. }. Although the dollar was still technically redeemable for gold the elastic money supply made it possible to steer the economy by means of monetary policy. 
 
-The dollar was re-pegged multiple times between 1968-1971 as part of the Nixon chock~\cite{bordo:bretton:woods}. In 1971 Nixon ended the Bretton Woods agreement~\cite{bordo:bretton:woods}, the international agreement of exchange rates between currencies, rendering the dollar and all currencies pegged to the Dollar true fiat currencies. After the initial shock the free floating currencies failed to keep pace with gold due to money supply increases causing inflation(Se figure \ref{fig:gold:price:major:currency}).
+The dollar was re-pegged multiple times between 1968-1971 as part of the Nixon chock~\cite{bordo:bretton:woods}. In 1971 Nixon ended the Bretton Woods agreement~\cite{bordo:bretton:woods}, the international agreement of exchange rates between currencies, rendering the dollar and all currencies pegged to the Dollar true fiat currencies. After the initial shock the free floating currencies failed to keep pace with gold due to money supply increases causing inflation(see Figure \ref{fig:gold:price:major:currency}).
 
 \begin{figure}[!htb]
 	\centering
@@ -122,8 +122,6 @@ The dollar was re-pegged multiple times between 1968-1971 as part of the Nixon c
 \end{figure}
 
 \twocolumn
-
-
 
 \begin{table}[t]
 	\hspace{-0.85cm}
@@ -154,9 +152,9 @@ The dollar was re-pegged multiple times between 1968-1971 as part of the Nixon c
 
 \subsection{Hyperinflation}
 
-The major currencies seen in figure \ref{fig:gold:price:major:currency} are far from worst in their ability to hold value. Fiat currencies are highly dependent on its authority and their willingness to increase the money supply and history provides us with some catastrophes as seen in Table 2.
+The major currencies seen in Figure \ref{fig:gold:price:major:currency} are far from worst in their ability to hold value. Fiat currencies are highly dependent on its authority and their willingness to increase the money supply and history provides us with some catastrophes as seen in Table 2.
 
-During the last 250 years hyperinflation\footnote{There is no official definition of what constitutes hyper inflation but a rule of thumb seem to be over 50\% annual inflation.} has occurred at least 54 times~\cite{hanke:krus:hyperinflation:table, hanke:hyperinflation}. Many countries going through multiple inflationary periods, e.g. China 43-45, 47-49 and Georgia 92, 93-94. Hyperinflation devastates all savings and effectually letting savings subsidize the newly printed currency. The inflation narrows the time horizon of trade, since capital will go worthless in a short while, making it very difficult to formalize any long term investment or running a normal economy. 
+During the last 250 years hyperinflation\footnote{There is no official definition of what constitutes hyper inflation but a rule of thumb seem to be over 50\% annual inflation.} has occurred at least 54 times~\cite{hanke:krus:hyperinflation:table, hanke:hyperinflation}. Many countries going through multiple inflationary periods, e.g. China 43-45, 47-49 and Georgia 92, 93-94. Hyperinflation devastate all savings and effectually letting savings subsidize the newly printed currency. The inflation narrows the time horizon of trade, since capital will go worthless in a short while, making it very difficult to formalize any long term investment or running a normal economy. 
 
 \section{Trust}
 
@@ -167,10 +165,10 @@ The economic system built upon fiat currencies is based on the trust in the issu
 \vspace{5cm}
 
 \subsection{Relevancy}
-In many ways it helps to think of bitcoin as both a bearer instrument and as a monetary policy and how the system is designed as such. This section is an incomplete view on it's own and for further reading these recommendations are good starting points: 
+In many ways it helps to think of bitcoin as both a bearer instrument and as a monetary policy and how the system is designed as such. For further reading these recommendations are good starting points: 
 
 \begin{itemize}
-	\item Nick Szabo's blog Enumerated and above cited Shelling out~\cite{szabo:shelling:out, szabo:unenumerated}.
-	\item Saifedean Ammous's The bitcoin standard.~\cite{ammous:bitcoin:standard}
+	\item Nick Szabo's Enumerated and above cited Shelling out~\cite{szabo:shelling:out, szabo:unenumerated}.
+	\item Saifedean Ammous's book The bitcoin standard.~\cite{ammous:bitcoin:standard}
 	\item Waren Weber's paper A bitcoin standard.~\cite{weber:bitcoin:standard}
 \end{itemize}
